# agentic-orchestration

./: .gitignore  Makefile  README.md  go.mod  go.sum  mkdocs.yml
.github/workflows/: build.yml  mkdocs-gh-pages.yml
agents/: pyproject.toml
agents/doers/: __init__.py  base_doer.py  coder.py  echo_doer.py  research_export.py  researcher.py
agents/doers/tools/: __init__.py  code_exec.py  file_io.py  web_scrape.py
agents/reasoning/: __init__.py  base_reasoner.py  cot.py  strategy_selector.py  tot.py
agents/reflectors/: __init__.py  base_reflector.py  llm_auditor.py  rag_crossref.py  schema_validator.py  security_scan.py  test_runner.py
agents/shared/: __init__.py  base_agent.py  config.py  export.py  inference.py  schemas.py
agents/tests/: test_agents.py  test_base_agent.py  test_export.py  test_schemas.py
cmd/caof/: init.go  main.go  resume.go  run.go  spawn.go  status.go  teardown.go
config/: defaults.yaml
config/providers/: anthropic.yaml  llama.yaml  openai.yaml
docs/: CNAME  index.md
docs/architecture/: event-bus.md  memory.md  overview.md
docs/components/: agents.md  control-plane.md  inference.md  research-export.md
docs/getting-started/: installation.md  quickstart.md
docs/operations/: hitl.md  monitoring.md
docs/reference/: api.md  configuration.md
mcp/: inference.py  pyproject.toml  server.py  task_manager.py  web_research.py
scripts/: bootstrap.sh  install-mcp-service.sh  install-redis.sh  setup.sh
systemd/: caof-mcp.service  caof-mcp@.service  caof-redis.service
templates/: reflection_audit.tmpl  task_decomposition.tmpl
(+38 files in other folders)
